# STRATOQUANT_NEXUS_PROJECT

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  copilot-instructions.md  copilot-project-instructions.md  stratoquant.agent.md
.github/agents/: my-agent.agent.md  stratoquant.agent.md
.github/instructions/: stratoquant-code-review-only.instructions.md  stratoquant-coding-agent-only.instructions.md  stratoquant-core.instructions.md
.github/workflows/: ci.yml
.sq/: agent_config.yaml
config/: README.md  default.yaml  development.yaml  production.yaml
docs/: Domain-Level_Gap_Analysis_Progress_v2.md  Full_Blueprints_v2.md  Layer_Inventory_Implementation_Status_v2.md  Specification_StratoQuant_Project.md  TCN-10000_Priority_TODO_List_Roadmap_v2.md  architecture.md  getting-started.md  index.md  stratoquant-architecture.md  stratoquant-domain-knowledge.md  tradingview-integration.md
pine/layer_mirrors/: l99_microstructure_guard.pine
src/: app.py
src/stratoquant_nexus/: __init__.py  cli.py  engine.py
src/stratoquant_nexus/layers/: __init__.py  base.py  l0_data.py  l1_signals.py  l2_risk.py  l3_execution.py
src/stratoquant_nexus/pine_executor/: __init__.py  executor.py  models.py  webhook.py
src/stratoquant_nexus/utils/: __init__.py  config.py  logging.py
tests/: conftest.py
tests/unit/: test_data_layer.py  test_engine.py  test_execution_layer.py  test_pine_executor.py  test_risk_layer.py  test_signal_layer.py
tools/: sq_ai_helper.py
